View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032117 | Open CASCADE | OCCT:Visualization | public | 2021-02-05 20:33 | 2021-02-21 11:44 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.5.0 | ||||
Target Version | 7.6.0 | Fixed in Version | 7.6.0 | ||
Summary | 0032117: Visualization, TKOpenGl - assert in OpenGl_AspectsSprite due to implicit destruction of existing resource | ||||
Description | Assertion has been observed in OpenGl_AspectsSprite when RGBA marker is shared while Alpha marker is not. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR32117 has been created by kgv. SHA-1: f6ba3a4757b95382283080a2adb43cde10c84c78 No new revisions were added by this update. |
|
Patch is ready for review - OCCT branch: CR32118. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR32118-master-KGV/ |
|
The patch was reviewed |
|
Combination - OCCT branch : IR-2021-02-12 master SHA - fb68dbdbd6810ee27f9398c749c5740b7bea7818 a87b7ddc8cb44606b91e3f37113847c3f5f50fdc Products branch : IR-2021-02-12 SHA - 94205f40e685a70c77e547147d90c09e0a21c461 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17805.430000000237 / 17802.420000000013 [+0.02%] Products Total CPU difference: 11513.250000000124 / 11523.070000000105 [-0.09%] Windows-64-VC14: OCCT Total CPU difference: 19375.296875 / 19372.265625 [+0.02%] Products Total CPU difference: 12857.265625 / 12882.921875 [-0.20%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32117 has been deleted by inv. SHA-1: f6ba3a4757b95382283080a2adb43cde10c84c78 |
occt: master 665dc9e5 2021-02-05 17:38:15 Committer: bugmaster Details Diff |
0032117: Visualization, TKOpenGl - assert in OpenGl_AspectsSprite due to implicit destruction of existing resource RGBA and Alpha markers are now handled independently within OpenGl_AspectsSprite::build(). |
Affected Issues 0032117 |
|
mod - src/OpenGl/OpenGl_AspectsSprite.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-02-05 20:33 | kgv | New Issue | |
2021-02-05 20:33 | kgv | Assigned To | => kgv |
2021-02-05 20:40 | git | Note Added: 0098692 | |
2021-02-05 20:43 | kgv | Relationship added | related to 0031704 |
2021-02-05 22:19 | kgv | Note Added: 0098698 | |
2021-02-05 22:19 | kgv | Assigned To | kgv => osa |
2021-02-05 22:19 | kgv | Status | new => resolved |
2021-02-08 10:52 |
|
Note Added: 0098751 | |
2021-02-08 10:52 |
|
Assigned To | osa => bugmaster |
2021-02-08 10:52 |
|
Status | resolved => reviewed |
2021-02-13 11:09 | bugmaster | Note Added: 0098855 | |
2021-02-13 11:09 | bugmaster | Status | reviewed => tested |
2021-02-13 11:11 | bugmaster | Test case number | => Not required |
2021-02-13 11:29 | bugmaster | Changeset attached | => occt master 665dc9e5 |
2021-02-13 11:29 | bugmaster | Status | tested => verified |
2021-02-13 11:29 | bugmaster | Resolution | open => fixed |
2021-02-21 11:44 | git | Note Added: 0099042 |