0032117: Visualization, TKOpenGl - assert in OpenGl_AspectsSprite due to implicit destruction of existing resource

RGBA and Alpha markers are now handled independently within OpenGl_AspectsSprite::build().